--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: wangzhichiao<https://github.com/wzc570738205>
  * @Date: 2020-05-07 20:54:02
  * @LastEditors: wangzhichiao<https://github.com/wzc570738205>
- * @LastEditTime: 2020-05-08 09:49:04
+ * @LastEditTime: 2020-05-08 11:05:11
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -73,9 +73,9 @@
   console.log(response.data)
   });
 
-  let a = window.parent.document;
-  console.log(a);
-  console.log(window.parent.document.href);
+/*   let a = window.parent.document;
+  console.log(a); */
+  console.log(document.referrer);
   console.log(location.href);
   //document.getElementsByClassName('layout_menu_start_button')[0].click()
   //document.getElementsByClassName('layout_start_item')[17].click()
