--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: wangzhichiao<https://github.com/wzc570738205>
  * @Date: 2020-05-07 20:54:02
  * @LastEditors: wangzhichiao<https://github.com/wzc570738205>
- * @LastEditTime: 2020-05-08 11:07:38
+ * @LastEditTime: 2020-05-08 12:23:59
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -21,7 +21,7 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
-  <body>
+  <body>  
     <button type="button" class="btn btn-primary" id="home">跳转到首页</button>
 
     <div class="alert alert-success" role="alert">信息-员工管理-信息</div>
@@ -88,6 +88,7 @@
   document.getElementsByClassName("layout_menu_start_button")[0].click(); */
 
   document.getElementById('home').onclick = function(){
-    window.parent.document.getElementsByClassName('layout_content_taskbar_item')[0].getElementsByClassName('layout_content_taskbar_item_text')[0].click() 
+   // window.parent.document.getElementsByClassName('layout_content_taskbar_item')[0].getElementsByClassName('layout_content_taskbar_item_text')[0].click() 
+   window.opener.postMessage('Nice to see you', 'http://118.190.235.60');
   }
 </script>
