--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: wangzhichiao<https://github.com/wzc570738205>
  * @Date: 2020-05-07 20:54:02
  * @LastEditors: wangzhichiao<https://github.com/wzc570738205>
- * @LastEditTime: 2020-05-08 13:25:06
+ * @LastEditTime: 2020-05-08 13:33:32
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -22,8 +22,9 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>  
-    <button type="button" class="btn btn-primary" onclick="postmesage('home')">跳转到首页</button>
+    <button type="button" class="btn btn-primary" onclick="postmesage('首页')">跳转到首页</button>
     <button type="button" class="btn btn-primary" onclick="postmesage('工程管理')">跳转到工程管理</button>
+    <button type="button" class="btn btn-primary" onclick="postmesage('组织管理')">打开组织管理</button>
 
     <div class="alert alert-success" role="alert">信息-员工管理-信息</div>
     <table class="table table-bordered" id="table">
