--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: wangzhichiao<https://github.com/wzc570738205>
  * @Date: 2020-05-07 20:54:02
  * @LastEditors: wangzhichiao<https://github.com/wzc570738205>
- * @LastEditTime: 2020-05-08 13:55:02
+ * @LastEditTime: 2020-05-08 13:56:23
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -95,7 +95,7 @@
    // window.parent.document.getElementsByClassName('layout_content_taskbar_item')[0].getElementsByClassName('layout_content_taskbar_item_text')[0].click() 
    //window.opener.postMessage('Nice to see you', 'http://118.190.235.60');
   }
-  function postmesage(mes,tab){
+  function postmesage(name,tab){
     let obj={
       name:name,
       tab:tab,
