--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: wangzhichiao<https://github.com/wzc570738205>
  * @Date: 2020-05-07 20:54:02
  * @LastEditors: wangzhichiao<https://github.com/wzc570738205>
- * @LastEditTime: 2020-05-08 14:19:30
+ * @LastEditTime: 2020-05-08 14:34:24
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -33,7 +33,7 @@
       class="btn btn-primary"
       onclick="postmesage('工程管理' ,'信息')"
     >
-      跳转到工程管理
+      打开工程管理
     </button>
     <button
       type="button"
